<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.mainfragments.GeneralCleaningFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/btn_back_fg_after"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="16dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_back_fg_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:text="@string/general"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/btn_back_fg_after"
            app:layout_constraintTop_toTopOf="@id/btn_back_fg_after" />

        <ImageView
            android:id="@+id/img_cl_fg"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_margin="16dp"
            android:background="@drawable/img_fg"
            android:contentDescription="@string/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_back_fg_after" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/description_general"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/img_cl_fg"
            app:layout_constraintStart_toStartOf="@id/img_cl_fg"
            app:layout_constraintTop_toBottomOf="@id/img_cl_fg" />

        <TextView
            android:id="@+id/tv_what_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/what"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_description"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <TextView
            android:id="@+id/tv_number_of_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/number_of_foom"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_what_services"
            app:layout_constraintTop_toBottomOf="@id/tv_what_services" />

        <LinearLayout
            android:id="@+id/container_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_number_of_rooms">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_one_variant"
                android:layout_width="108dp"
                android:layout_height="76dp"
                android:layout_margin="4dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/white_"
                app:cardCornerRadius="16dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="17dp"
                    android:text="@string/_1"
                    android:textColor="@color/gray_"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:text="@string/_55_2"
                    android:textColor="@color/gray_"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_two_variant"
                android:layout_width="108dp"
                android:layout_height="76dp"
                android:layout_margin="4dp"
                android:backgroundTint="@color/white_"
                app:cardCornerRadius="16dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="17dp"
                    android:text="@string/_2"
                    android:textColor="@color/gray_"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:text="@string/_60_2"
                    android:textColor="@color/gray_"
                    android:textSize="12sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_three_variant"
                android:layout_width="108dp"
                android:layout_height="76dp"
                android:layout_margin="4dp"
                android:backgroundTint="@color/white_"
                app:cardCornerRadius="16dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="17dp"
                    android:text="@string/_3"
                    android:textColor="@color/gray_"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:text="@string/_68_2"
                    android:textColor="@color/gray_"
                    android:textSize="12sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_other"
            android:layout_width="334dp"
            android:layout_height="82dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white_"
            app:cardCornerRadius="10dp"
            app:cardElevation="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_btn">

            <TextView
                android:id="@+id/tv_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/other" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="36dp"
                android:text="@string/_1000"
                android:textColor="@color/gray_" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:text="@string/what_type_of_premises_do_you_have"
                android:textColor="@color/gray_" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_additional_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Дополнительные услуги"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/btn_other"
            app:layout_constraintTop_toBottomOf="@id/btn_other" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingStart="36dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_additional_services"
            tools:listitem="@layout/item_price_list" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>