<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.mainfragments.extra_cleaning.ExtraCleaningFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/btn_back_to_home_fragment"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="16dp"
                android:background="@drawable/ic_back"
                android:contentDescription="@string/text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_back_fg_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_cleaning"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_back_to_home_fragment" />

            <ImageView
                android:id="@+id/img_cl_fg"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_margin="16dp"
                android:background="@drawable/img_fg"
                android:contentDescription="@string/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_back_fg_after" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:minLines="7"
                android:text="@string/extra_cleaning_description"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/img_cl_fg"
                app:layout_constraintStart_toStartOf="@id/img_cl_fg"
                app:layout_constraintTop_toBottomOf="@id/img_cl_fg" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_services"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:paddingBottom="60dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/img_cl_fg"
                app:layout_constraintStart_toStartOf="@id/img_cl_fg"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                tools:listitem="@layout/item_price_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue"
        android:text="Заказать"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>